# opengl-nir-project

./: README.md
src/: CMakeLists.txt  camera.h  main.cpp  material.h  mesh.h  model.h  shader.h
src/resources/shaders/: cube_shader.vert  diffuse_specular_texture_shader.frag  diffuse_texture_shader.frag  single_color_shader.frag  skeleton_shader.vert
